--- a/index.html
+++ b/index.html
@@ -1,141 +1,143 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
 
-<head>
-	<meta charset="utf-8">
+    <title>Sprint Challenge - Home</title>
 
-	<title>Sprint Challenge - Home</title>
+    <link rel="stylesheet" href="css/index.css" />
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
-</head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/5b12ffad4b.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
-	<div>
-		<!-- header -->
-		<header>
-			<div>
-				BLOOMTECH BAR AND GRILL
+  <body>
+    <div>
+      <header>
+        <div class="opaque">
+          <nav>
+            <h1>BLOOMTECH BAR AND GRILL</h1>
+            <div class="links">
+              <a href="menu.html">Menu</a>
+              <a href="#">Reservations</a>
+              <a href="#">Special Offers</a>
+              <a href="#">Contact</a>
+            </div>
+            <div class="socialmedia">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+          </nav>
+        </div>
+      </header>
+      <section class="gallery">
+        <div>
+          <h2>OUR FOOD</h2>
+        </div>
+        <div class="food">
+          <div class="foodimg">
+            <div class="toprow">
+              <img src="img/food-avocadotoast.jpg" alt="avocado toast" />
+              <img src="img/food-burger.jpg" alt="burger" />
+              <img src="img/food-wings.jpg" alt="wings" />
+            </div>
+            <div class="midrow">
+              <img src="img/food-poutine.jpg" alt="poutine" />
+              <img src="img/food-ribs.jpg" alt="ribs" />
+              <img src="img/food-sandwich.jpg" alt="sandwich" />
+            </div>
+            <div class="bottomrow">
+              <img src="img/food-sausage.jpg" alt="sausage" />
+              <img src="img/food-steak.jpg" alt="steak" />
+              <img src="img/food-tacos.jpg" alt="tacos" />
+            </div>
+          </div>
+        </div>
+      </section>
 
-				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
-			</div>
-		</header>
+      <div class="spacer"></div>
 
-		<!-- gallery section -->
-		<section class="gallery">
-			<div>
-				<h2>OUR FOOD</h2>
+      <section class="about">
+        <div class="about-container">
+          <h2>ABOUT US</h2>
+          <div id="cooks" class="pic"></div>
+          <div class="text">
+            <h3>Good Food, Great People</h3>
+            <p>
+              Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short
+              ribs tail dolore, fatback in tempor meatloaf pig sunt porchetta
+              beef. Ad hamburger pig veniam, andouille exercitation cillum
+              eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta
+              frankfurter sed, est t-bone porchetta capicola id tri-tip cillum
+              cow leberkas do minim. Sausage ea velit boudin laboris dolore
+              short loin corned beef commodo jowl beef dolor tempor. Dolor culpa
+              enim in meatloaf, ham mollit shankle duis chicken dolore andouille
+              do tenderloin qui.
+            </p>
+          </div>
+          <div id="bartender" class="pic"></div>
+        </div>
+      </section>
 
-				img/food-avocadotoast.jpg
+      <div class="spacer"></div>
 
-				img/food-burger.jpg
+      <section class="contact">
+        <div class="contact-container">
+          <h2>CONTACT US</h2>
+          <div class="info">
+            <div class="address">
+              <h3>Address</h3>
+              <address>
+                <p>100 Main St</p>
+                <p>San Francisco, CA</p>
+              </address>
+            </div>
+            <div class="hours">
+              <h3>Hours</h3>
+              <div>
+                <p>Sunday to Thursday:</p>
+                <p>12:00p - 12:00a</p>
+                <p>Friday and Saturday:</p>
+                <p>12:00p - 4:00a</p>
+              </div>
+            </div>
+            <div class="contacts">
+              <h3>Contacts</h3>
+              <div>
+                <a id="phone" href="tel:999-999-9999">999-999-9999</a>
+                <a id="email" href="mailto:restaurant@bloomtech.com"
+                  >restaurant@bloomtech.com</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-				img/food-poutine.jpg
+      <div class="spacer-sm"></div>
 
-				img/food-ribs.jpg
-
-				img/food-sandwich.jpg
-
-				img/food-sausage.jpg
-
-				img/food-steak.jpg
-
-				img/food-tacos.jpg
-
-				img/food-wings.jpg
-			</div>
-		</section>
-
-		<!-- spacer -->
-		<div class="spacer"></div>
-
-		<!-- about section -->
-		<section class="about">
-			<div class="about-container">
-				<h2>ABOUT US</h2>
-
-				<div id="cooks" class="pic">
-				</div>
-
-				<div class="text">
-					<h3>Good Food, Great People</h3>
-					<p>Quis duis aute, shank ut pork eiusmod in ball tip jerky non. Short ribs tail dolore, fatback in
-						tempor meatloaf pig sunt porchetta beef. Ad hamburger pig veniam, andouille exercitation cillum
-						eiusmod doner irure tail burgdoggen rump chislic officia. Pancetta frankfurter sed, est t-bone
-						porchetta capicola id tri-tip cillum cow leberkas do minim. Sausage ea velit boudin laboris
-						dolore
-						short loin corned beef commodo jowl beef dolor tempor. Dolor culpa enim in meatloaf, ham mollit
-						shankle duis chicken dolore andouille do tenderloin qui.</p>
-				</div>
-
-				<div id="bartender" class="pic">
-				</div>
-			</div>
-		</section>
-
-		<!-- spacer -->
-		<div class="spacer"></div>
-
-		<!-- contact section -->
-		<section class="contact">
-			<div class="contact-container">
-				<h2>CONTACT US</h2>
-
-				<div class="info">
-					<div class="address">
-						<h3>Address</h3>
-
-						<address>
-							<p>100 Main St</p>
-							<p>San Francisco, CA</p>
-						</address>
-					</div>
-
-					<div class="hours">
-						<h3>Hours</h3>
-
-						<div>
-							<p>Sunday to Thursday:</p>
-							<p>12:00p - 12:00a</p>
-							<p>Friday and Saturday:</p>
-							<p>12:00p - 4:00a</p>
-						</div>
-					</div>
-
-					<div class="contacts">
-						<h3>Contacts</h3>
-
-						<div>
-							<a id="phone" href="tel:999-999-9999">999-999-9999</a>
-							<a id="email" href="mailto:restaurant@bloomtech.com">restaurant@bloomtech.com</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- spacer -->
-		<div class="spacer-sm"></div>
-
-		<!-- footer -->
-		<footer>
-			<!-- email signup -->
-			Join our mailing list!
-			Sign Up
-			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
-			<!-- copyright -->
-			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
-		</footer>
-	</div>
-</body>
-
+      <footer>
+        <h3>Join our mailing list!</h3>
+        <input type="email" placeholder="Email Address" />
+        <button>Sign Up</button>
+        <div class="links">
+          <a href="menu.html">Menu</a>
+          <a href="#">Reservations</a>
+          <a href="#">Special Offers</a>
+          <a href="#">Contact</a>
+        </div>
+        <div class="copyright">
+          ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
