--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>Sprint Challenge - Home</title>
 
     <link rel="stylesheet" href="css/index.css" />
@@ -125,9 +127,11 @@
       <div class="spacer-sm"></div>
 
       <footer>
-        <h3>Join our mailing list!</h3>
-        <input type="email" placeholder="Email Address" />
-        <button>Sign Up</button>
+        <div class="email">
+          <label for="email">Join our mailing list!</label><br />
+          <input type="text" placeholder="Email Address" />
+          <button>Sign Up</button>
+        </div>
         <div class="links">
           <a href="menu.html">Menu</a>
           <a href="#">Reservations</a>
