--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
   <head>
     <script
-	  src="https://kit.fontawesome.com/5b12ffad4b.js"
-	  crossorigin="anonymous"
-	  ></script>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      src="https://kit.fontawesome.com/5b12ffad4b.js"
+      crossorigin="anonymous"
+    ></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sprint Challenge - Menu</title>
-    
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="html" href="menu.html">
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/5b12ffad4b.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="html" href="menu.html" />
   </head>
 
   <body>
@@ -20,26 +26,21 @@
       <!-- header -->
       <header>
         <div class="shadedbox">
-          <a href="/index.html"><h1 class="title">BLOOMTECH BAR AND GRILL</h1></a>
+          <a href="/index.html"
+            ><h1 class="title">BLOOMTECH BAR AND GRILL</h1></a
+          >
           <!-- nav -->
-		  <nav>
-			  <div class="navlinks">
-						<a href="/menu.html">Menu</a><a href="#">Reservations</a
-						  ><a href="#">Special Offers</a><a href="#">Contact</a>
-					</div>
-					<div class="socials">
-            <a href="#"
-            ><i class="fa-brands fa-square-facebook"></i
-                ></a>
-                <a href="#"
-                ><i class="fa-brands fa-square-twitter"></i
-                    ></a>
-                    <a href="#"
-                    ><i class="fa-brands fa-square-instagram"></i
-                        ></a>
-                    </div>
-                </nav>
-				</nav>
+          <nav>
+            <div class="navlinks">
+              <a href="/menu.html">Menu</a><a href="#">Reservations</a
+              ><a href="#">Special Offers</a><a href="#">Contact</a>
+            </div>
+            <div class="socials">
+              <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            </div>
+          </nav>
         </div>
       </header>
 
@@ -135,24 +136,23 @@
       <div class="spacer-sm"></div>
 
       <!-- footer -->
-	  <div class="footerbackground">
-
-		  <footer>
-			  <!-- email signup -->
-			  <label for="email">Join our mailing list!</label><label for=""><br>
-				<input type="text" placeholder="Email Address" >
-				<button>Sign Up</button>
-				<!-- nav -->
-				<nav class="bottomnav">
-					<a href="/menu.html">Menu</a><a href="#">Reservations</a
-						><a href="#">Special Offers</a><a href="#">Contact</a>
-					</nav>
-					<!-- copyright -->
-					<p class="copyright">
-						©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
-					</p>
-				</footer>
-			</div>
+      <div class="footerbackground">
+        <footer>
+          <!-- email signup -->
+          <label for="email">Join our mailing list!</label><br />
+          <input type="text" placeholder="Email Address" />
+          <button>Sign Up</button>
+          <!-- nav -->
+          <nav class="bottomnav">
+            <a href="/menu.html">Menu</a><a href="#">Reservations</a
+            ><a href="#">Special Offers</a><a href="#">Contact</a>
+          </nav>
+          <!-- copyright -->
+          <p class="copyright">
+            ©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+          </p>
+        </footer>
+      </div>
     </div>
   </body>
 </html>
